remake design to match google

--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css">
+
+        <!-- fontawesome cdn -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
         <title>Google KW</title>
     </head>
 
     <body>
         <div class="menu">
-            <ul>
-                <li><a href="#">Gmail</a></li>
-                <li><a href="#">Gambar</a></li>
-                <li><a href="#">Profile</a></li>
-            </ul>
-        </div>
+            <a href="#">Gmail</a>
+            <a href="#">Gambar</a>
+            <div class="avatar">
+                <a>
+                    <img src="assets/img/bekantan.jpg" alt="profile">
+                </a>
+            </div>
+        </div> 
 
         <div class="isi">
             <div class="google">
-                <h1>Google KW</h1>
+                <img src="assets/img/googlelogo.png" alt="google">
+                <p>KW Edition</p>
             </div>
 
             <div class="submenu">
@@ -41,10 +53,18 @@
             </div>
 
             <div class="footer2">
-                <a>Tentang</a>
-                <a>Periklanan</a>
-                <a>Bisnis</a>
-                <a>Cara kerja penelusuran</a>
+                <div class="kiri">
+                    <a href="#">Tentang</a>
+                    <a href="#">Periklanan</a>
+                    <a href="#">Bisnis</a>
+                    <a href="#">Cara kerja penelusuran</a>
+                </div>
+                <div class="kanan">
+                    <a href="#">Privasi</a> 
+                    <a href="#">Persyaratan</a> 
+                    <a href="#">Setelan</a> 
+                </div>
+                
             </div>
         </footer>
     </body>
