--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div class="real">
-                Buka Google di <a href="http://google.com">Google.com</a>
+                Buka Google di <a href="https://www.google.com/">Google.com</a>
                 </div>
             </div>
         </div>
